Ensure footer never has whitespace below it

--- a/apps/prediction-frontend/src/styles/globals.css
+++ b/apps/prediction-frontend/src/styles/globals.css
@@ -74,10 +74,12 @@
   }
   html {
     @apply scroll-smooth;
+    height: 100%;
   }
   body {
     @apply bg-background text-foreground;
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
+    height: 100%;
   }
 }
